--- a/docker/envs/app.env
+++ b/docker/envs/app.env
@@ -1,27 +1,27 @@
-HTTP_PORT=
-HTTPS_PORT=
-HTTPS_HOST_PORT=
-APP_NAME=
-API_URL=
-API_TOKEN=
-API_PATH=
+HTTP_PORT=3000
+HTTPS_PORT=3001
+HTTPS_HOST_PORT=443
+APP_NAME=Assesment BizAway
+API_URL=https://z0qw1e7jpd.execute-api.eu-west-1.amazonaws.com/default/
+API_TOKEN="The token has been removed for security reasons"
+API_PATH=trips
 
-DB_USER=
-DB_PWD=
-DB_SERVICE=
-DB_NAME=
-DB_PORT=
+DB_USER=manager
+DB_PWD=mL5pzEgVDU9a28FykKY4Nc
+DB_SERVICE=assesment-db
+DB_NAME=trips
+DB_PORT=5432
 
-DATABASE_URL=
+DATABASE_URL="postgresql://manager:mL5pzEgVDU9a28FykKY4Nc@assesment-db:5432/trips?schema=public"
 
 
-HTTPS_ENABLED=
-HTTPS_FOLDER_PATH=
-HTTPS_KEY=
-HTTPS_CERT=
-HTTPS_CA=
+HTTPS_ENABLED=true
+HTTPS_FOLDER_PATH=/certs
+HTTPS_KEY=${HTTPS_FOLDER_PATH}/key.key
+HTTPS_CERT=${HTTPS_FOLDER_PATH}/cert.crt
+# HTTPS_CA=${HTTPS_FOLDER_PATH}/ca.pem
 
-REDIS_HOST=
-REDIS_PORT=
-REDIS_PASSWORD=
-REDIS_TTL=
+REDIS_HOST=assesment-redis
+REDIS_PORT=6379
+REDIS_PASSWORD=Y98fdsKtPTAJSnrRN2xwchWjvGgpVkBUCe
+REDIS_TTL=360
