--- a/assesment/package.json
+++ b/assesment/package.json
@@ -26,6 +26,7 @@
     "prisma:seed": "npx prisma db seed"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.1.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -35,6 +36,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ioredis": "^5.4.1",
+    "json2csv": "^6.0.0-alpha.2",
     "nestjs-prisma": "^0.23.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -48,6 +50,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -89,6 +92,9 @@
     "testEnvironment": "node",
     "moduleNameMapper": {
       "^src/(.*)$": "<rootDir>/src/$1"
-    }
+    },
+    "setupFiles": [
+      "dotenv/config"
+    ]
   }
 }
