--- a/assesment/sonar-project.properties
+++ b/assesment/sonar-project.properties
@@ -1,8 +1,8 @@
 ## SonarQube configuration file
 
 # Required properties
-sonar.projectKey=
-sonar.projectName=
+sonar.projectKey=BizAway-Tech-Assesment
+sonar.projectName=BizAway Tech Assesment
 
 sonar.projectVersion=1.0
 
@@ -10,7 +10,7 @@ sonar.projectVersion=1.0
 sonar.sources=src
 
 # Optional properties
-sonar.host.url=
-sonar.login=
+sonar.host.url=http://sonarqube:9000  
+sonar.login=""
 
 sonar.exclusions="**/test/**/*,**/tests/**/*,*.spec.ts,*.test.ts,*.spec.js,*.test.js"
