--- a/docker.env
+++ b/docker.env
@@ -1,22 +1,22 @@
-DB_USER=
-DB_PWD=
-DB_NAME=
-DB_HOST_PORT=
-DB_DOCKER_PORT=
+DB_USER=manager
+DB_PWD=mL5pzEgVDU9a28FykKY4Nc
+DB_NAME=trips
+DB_HOST_PORT=6432
+DB_DOCKER_PORT=5432
 
 
-APP_HOST_HTTP_PORT=
-APP_DOCKER_HTTP_PORT=
+APP_HOST_HTTP_PORT=80
+APP_DOCKER_HTTP_PORT=3000
 
-APP_HOST_HTTPS_PORT=
-APP_DOCKER_HTTPS_PORT=
+APP_HOST_HTTPS_PORT=443
+APP_DOCKER_HTTPS_PORT=3001
 
-REDIS_HOST_PORT=
-REDIS_DOCKER_PORT=
-REDIS_PWD=
+REDIS_HOST_PORT=6379
+REDIS_DOCKER_PORT=6379
+REDIS_PWD=Y98fdsKtPTAJSnrRN2xwchWjvGgpVkBUCe
 
 REDIS_COMMANDER_HOSTS=local:assesment-redis:${REDIS_HOST_PORT}:0:${REDIS_PWD}
-REDIS_COMMANDER_DOCKER_PORT=
-REDIS_COMMANDER_HOST_PORT=
-REDIS_COMMANDER_USER=
-REDIS_COMMANDER_PWD=
+REDIS_COMMANDER_DOCKER_PORT=8081
+REDIS_COMMANDER_HOST_PORT=8081
+REDIS_COMMANDER_USER=admin
+REDIS_COMMANDER_PWD=V4znWHc9dBSNtP3j7DpQksqR5ThFmEeCba
